[package]
name = "eskf"
version = "0.1.0"
authors = ["Jørgen Nordmoen <jorgen@nordmoen.net>"]
edition = "2018"

[features]
default = ["full-reset"]

# Perform a full filter reset during measurement update
full-reset = []
# A more stable covariance update, but more computationally expensive
cov-symmetric = []
# Stable, symmetric and positive covariance update, computationally expensive
cov-joseph = []

[dependencies]
nalgebra = "0.25"

[dev-dependencies]
approx = "0.4.0"
