[package]
name = "eskf"
version = "0.1.0"
authors = ["Jørgen Nordmoen <jorgen@nordmoen.net>"]
description = "Navigation filter based on an Error State Kalman Filter (ESKF)"
keywords = ["navigation", "filter", "orientation", "error state", "kalman filter"]
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]
edition = "2018"
readme = "README.md"

[features]
default = ["std", "full-reset"]
# Perform a full filter reset during measurement update
full-reset = []
# A more stable covariance update, but more computationally expensive
cov-symmetric = []
# Stable, symmetric and positive covariance update, computationally expensive
cov-joseph = []
# Use Rust 'std', disable to enable 'no_std'
std = ["nalgebra/std"]

[dependencies]
nalgebra = "0.25"

[dev-dependencies]
approx = "0.4.0"
nalgebra = { version = "0.25", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotly = "0.6.0"

[[example]]
name = "plot_carla"
required-features = ["std"]
