[package]
name = "eskf"
version = "0.3.0"
authors = ["Jørgen Nordmoen <jorgen@nordmoen.net>"]
description = "Navigation filter based on an Error State Kalman Filter (ESKF)"
keywords = ["navigation", "filter", "orientation", "kalman"]
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std", "mathematics", "science::robotics"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/nordmoen/eskf-rs"
repository = "https://github.com/nordmoen/eskf-rs"
documentation = "https://docs.rs/eskf"
exclude = ["docs/*"]

[features]
default = ["std", "full-reset"]
# Perform a full filter reset during measurement update
full-reset = []
# A more stable covariance update, but more computationally expensive
cov-symmetric = []
# Stable, symmetric and positive covariance update, computationally expensive
cov-joseph = []
# Use Rust 'std', disable and enable 'no_std' to use in no_std enviroment
std = ["nalgebra/std"]
# Enable to use in no_std environment
no_std = ["nalgebra/libm", "dep:num-traits"]

[dependencies]
nalgebra = { version = "0.32.3", default-features = false }
num-traits = { version = "0.2.17", optional = true, default-features = false, features = [
    "libm",
] }

[dev-dependencies]
approx = "0.5.0"
nalgebra = { version = "0.32", features = ["serde-serialize", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotly = "0.6.0"

[[example]]
name = "plot_carla"
required-features = ["std"]
